package attachments;

public class SaltVomitter {
}
