package map;

public class Junction {
}
