package attachments;

public class Attachment {
}
