package attachments;

public class VomitingHead {
}
