package map;

public class Road {
}
